various spacing fixes

--- a/wp-content/themes/frank-collective/assets/sass/pages/_homepage.scss
+++ b/wp-content/themes/frank-collective/assets/sass/pages/_homepage.scss
@@ -135,7 +135,7 @@ header {
     }
     .slick-prev {
         width: 25%;
-        height: 100vh;
+        height: 150vh;
         left: 0;
         z-index: 1;
         top: 0;
