--- a/wp-content/themes/frank-collective/assets/sass/pages/_work.scss
+++ b/wp-content/themes/frank-collective/assets/sass/pages/_work.scss
@@ -34,7 +34,7 @@
     display: flex;
     flex-wrap: wrap;
     @include media('<=tablet') {
-        padding: 0 .5rem;
+        padding: 0 .4rem;
     }
     .work-wrap {
         position: relative;
@@ -57,6 +57,7 @@
         }
         &:hover {
             .work-cat,
+            .work-title,
             .tagline {
                 color: $blue;
             }
@@ -663,6 +664,7 @@
         }
         &:hover {
             .work-cat,
+            .work-title,
             .tagline {
                 color: $blue;
             }
@@ -673,7 +675,6 @@
                 // flex-direction: column;
                 // align-items: flex-start;
                 display: block;
-
                 h4 {
                     margin: 0;
                     line-height: 1.2;
